# gridflag

./: .gitignore  LICENSE  README.md  environment.yml  index.md  requirements.txt  setup.cfg  setup.py  setup.sh  singularity.def  stats_dev_notebook.ipynb
gridflag/: compute_uv_bins.py  gridflag.py  groupby_partition.py  ipflag.py  listobs_daskms.py
ipflag/: annulus_stats.py  compute_uv_bins.py  compute_uv_bins2.py  gridflag.py  groupby_apply.py  groupby_partition.py  ipflag.py  listobs_daskms.py  plotgrid.py
pipeline_files/: config.txt  processMeerKAT.py
pipeline_files/aux_scripts/: setorder.py
pipeline_files/crosscal_scripts/: gridflag_round.py
slurm/: dask_launcher.job  ipflag_dask.py
