[metadata]
name = gridflag
description = Flagging in the UV plane
long_description = file: README.md
author = Joe Bochenek, Srikrishna Sekhar
author_email = joe.bochenek@uct.ac.za, srikrishna@idia.ac.za
license = MIT
github_project = idia-astro/ipflag


[options]
zip_safe = False
packages = find:
install_requires =
   dask-ms >= 0.2.8
   xarray
   dask[complete]
   dask-jobqueue
   numpy >= 1.8.0
   bokeh
